--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h3 {
 }
 
 .navbar-brand {
-  font-family: "Ubuntu";
+  font-family: "Work Sans";
   font-size: 2.5em;
 }
 
@@ -77,6 +77,7 @@ h3 {
 
 .icon:hover {
   color: #ff4c68;
+  transform: scale(1.2);
 }
 
 /* Testimonials */
